--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,6 @@
     <script src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
 
-    <script>
-        //your code is going to go here, for now
-        const app = () => {
-            
-        }
-    </script>
+    <script src="./App.js"> </script>
 </body>
 </html>
